<?xml version="1.0"?>
<package>
  <name>the_maze_runner</name>
  <version>1.0.0</version>
  <description>Uses SLAM to map a maze and then uses an algorithm to solve the maze and follow the path</description>

  <maintainer email="infantinoalex@gmail.com">Alexander Infantino</maintainer>

  <license>UML</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
